--- a/scss/imports/_normalize.scss
+++ b/scss/imports/_normalize.scss
@@ -4,7 +4,11 @@
  */
 
 // set var if not present
-with-flavor ?= false
+@if variable-exists(with-flavor) {
+
+} @else {
+  $with-flavor: false;
+}
 
 /**
  * 1. Set default font family to sans-serif.
@@ -12,15 +16,17 @@ with-flavor ?= false
  *    user zoom.
  */
 
-html
-  font-family: sans-serif // 1
-  -ms-text-size-adjust: 100% // 2
-  -webkit-text-size-adjust: 100% // 2
-  if (with-flavor)
+html {
+  font-family: sans-serif; // 1
+  -ms-text-size-adjust: 100%; // 2
+  -webkit-text-size-adjust: 100%; // 2
+  @if ($with-flavor) {
     // reset box model
-    box-sizing: border-box
+    box-sizing: border-box;
     // set transparent tap highlight for iOS
-    -webkit-tap-highlight-color: rgba(0,0,0,0)
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
+  }
+ }
 
 /**
  * HTML5 display definitions
@@ -35,18 +41,20 @@ html
 audio,
 canvas,
 progress,
-video
-  display: inline-block // 1
-  vertical-align: baseline // 2
+video {
+  display: inline-block; // 1
+  vertical-align: baseline; // 2
+}
 
 /**
  * Prevent modern browsers from displaying `audio` without controls.
  * Remove excess height in iOS 5 devices.
  */
 
-audio:not([controls])
-  display: none
-  height: 0
+audio:not([controls]) {
+  display: none;
+  height: 0;
+}
 
 /**
  * Address `[hidden]` styling not present in IE 8/9/10.
@@ -54,8 +62,9 @@ audio:not([controls])
  */
 
 [hidden],
-template
-  display: none
+template {
+  display: none;
+}
 
 /**
  * Links
@@ -66,16 +75,18 @@ template
  * Remove the gray background color from active links in IE 10.
  */
 
-a
-  background-color: transparent
+a {
+  background-color: transparent;
+}
 
 /**
  * Improve readability when focused and also mouse hovered in all browsers.
  */
 
 a:active,
-a:hover
-  outline: 0
+a:hover {
+  outline: 0;
+}
 
 /**
  * Text-level semantics
@@ -86,18 +97,21 @@ a:hover
  * Address styling not present in IE 8/9/10/11, Safari, and Chrome.
  */
 
-abbr[title]
-  border-bottom: 1px dotted
-  if (with-flavor)
-    cursor: help
+abbr[title] {
+  border-bottom: 1px dotted;
+  @if ($with-flavor) {
+    cursor: help;
+  }
+}
 
 /**
  * Address style set to `bolder` in Firefox 4+, Safari, and Chrome.
  */
 
 b,
-strong
-  font-weight: bold
+strong {
+  font-weight: bold;
+}
 
 /**
  * 1. Address styling not present in Safari and Chrome.
@@ -105,39 +119,45 @@ strong
  */
 
 dfn, // 1
-i, em // 2
-  font-style: italic
+i, em { // 2
+  font-style: italic;
+}
 
 /**
  * Address styling not present in IE 8/9.
  */
 
-mark
-  background: #ff0
-  color: #000
+mark {
+  background: #ff0;
+  color: #000;
+}
 
 /**
  * Address inconsistent and variable font size in all browsers.
  */
 
-small
-  font-size: 80%
+small {
+  font-size: 80%;
+}
 
 /**
  * Prevent `sub` and `sup` affecting `line-height` in all browsers.
  */
 
 sub,
-sup
-  font-size: 75%
-  line-height: 0
-  position: relative
+sup {
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+}
 
-sup
-  top: -0.5em
+sup {
+  top: -0.5em;
+}
 
-sub
-  bottom: -0.25em
+sub {
+  bottom: -0.25em;
+}
 
 /**
  * Embedded content
@@ -148,15 +168,17 @@ sub
  * Remove border when inside `a` element in IE 8/9/10.
  */
 
-img
-  border: 0
+img {
+  border: 0;
+}
 
 /**
  * Correct overflow not hidden in IE 9/10/11.
  */
 
-svg:not(:root)
-  overflow: hidden
+svg:not(:root) {
+  overflow: hidden;
+}
 
 /**
  * Grouping content
@@ -167,16 +189,18 @@ svg:not(:root)
  * Address differences between Firefox and other browsers.
  */
 
-hr
-  box-sizing: content-box
-  height: 0
+hr {
+  box-sizing: content-box;
+  height: 0;
+}
 
 /**
  * Contain overflow in all browsers.
  */
 
-pre
-  overflow: auto
+pre {
+  overflow: auto;
+}
 
 /**
  * Address odd `em`-unit font size rendering in all browsers.
@@ -185,8 +209,9 @@ pre
 code,
 kbd,
 pre,
-samp
-  font-family: monospace, monospace
+samp {
+  font-family: monospace, monospace;
+}
 
 /**
  * Forms
@@ -209,17 +234,19 @@ button,
 input,
 optgroup,
 select,
-textarea
-  color: inherit // 1
-  font: inherit // 2
-  margin: 0 // 3
+textarea {
+  color: inherit; // 1
+  font: inherit; // 2
+  margin: 0; // 3
+}
 
 /**
  * Address `overflow` set to `hidden` in IE 8/9/10/11.
  */
 
-button
-  overflow: visible
+button {
+  overflow: visible;
+}
 
 /**
  * Address inconsistent `text-transform` inheritance for `button` and `select`.
@@ -229,8 +256,9 @@ button
  */
 
 button,
-select
-  text-transform: none
+select {
+  text-transform: none;
+}
 
 /**
  * 1. Avoid the WebKit bug in Android 4.0.* where (2) destroys native `audio`
@@ -243,34 +271,38 @@ select
 button,
 html input[type="button"], // 1
 input[type="reset"],
-input[type="submit"]
-  -webkit-appearance: button // 2
-  cursor: pointer // 3
+input[type="submit"] {
+  -webkit-appearance: button; // 2
+  cursor: pointer; // 3
+}
 
 /**
  * Re-set default cursor for disabled elements.
  */
 
 button[disabled],
-html input[disabled]
-  cursor: default
+html input[disabled] {
+  cursor: default;
+}
 
 /**
  * Remove inner padding and border in Firefox 4+.
  */
 
 button::-moz-focus-inner,
-input::-moz-focus-inner
-  border: 0
-  padding: 0
+input::-moz-focus-inner {
+  border: 0;
+  padding: 0;
+}
 
 /**
  * Address Firefox 4+ setting `line-height` on `input` using `!important` in
  * the UA stylesheet.
  */
 
-input
-  line-height: normal
+input {
+  line-height: normal;
+}
 
 /**
  * It's recommended that you don't attempt to style these elements.
@@ -281,10 +313,12 @@ input
  */
 
 input[type="checkbox"],
-input[type="radio"]
-  if (!with-flavor)
-    box-sizing: border-box // 1
-  padding: 0 // 2
+input[type="radio"] {
+  @if ($with-flavor) {
+    box-sizing: border-box; // 1
+  }
+  padding: 0; // 2
+}
 
 /**
  * Fix the cursor style for Chrome's increment/decrement buttons. For certain
@@ -293,8 +327,9 @@ input[type="radio"]
  */
 
 input[type="number"]::-webkit-inner-spin-button,
-input[type="number"]::-webkit-outer-spin-button
-  height: auto
+input[type="number"]::-webkit-outer-spin-button {
+  height: auto;
+}
 
 /**
  * 1. Address `appearance` set to `searchfield` in Safari and Chrome.
@@ -302,14 +337,16 @@ input[type="number"]::-webkit-outer-spin-button
  *    (include `-moz` to future-proof).
  */
 
-input[type="search"]
-  if (with-flavor)
+input[type="search"] {
+  @if ($with-flavor) {
     // Override the extra rounded corners on search inputs in iOS
     // see https://github.com/twbs/bootstrap/issues/11586.
-    -webkit-appearance: none
-  else
-    -webkit-appearance: textfield // 1
-    box-sizing: content-box // 2
+    -webkit-appearance: none;
+  } @else {
+    -webkit-appearance: textfield; // 1
+    box-sizing: content-box; // 2
+  }
+}
 
 /**
  * Remove inner padding and search cancel button in Safari and Chrome on OS X.
@@ -318,20 +355,23 @@ input[type="search"]
  */
 
 input[type="search"]::-webkit-search-cancel-button,
-input[type="search"]::-webkit-search-decoration
-  -webkit-appearance: none
+input[type="search"]::-webkit-search-decoration {
+  -webkit-appearance: none;
+}
 
 /**
  * Remove default vertical scrollbar in IE 8/9/10/11.
  */
 
-textarea
-  overflow: auto
+textarea {
+  overflow: auto;
+}
 
 /**
  * Don't inherit the `font-weight` (applied by a rule above).
  * NOTE: the default cannot safely be changed in Chrome and Safari on OS X.
  */
 
-optgroup
-  font-weight: bold
+optgroup {
+  font-weight: bold;
+}
